# fawkes-crypto-examples

./: Cargo.toml  LICENSE_MIT  README.md
fibonacci/: Cargo.toml
fibonacci/src/: circuit.rs  main.rs
magic-square/: Cargo.toml  index.html
magic-square/src/: circuit.rs  lib.rs
multiplier/: Cargo.toml
multiplier/src/: main.rs
poseidon/: Cargo.toml
poseidon/src/: circuit.rs  main.rs
src/: circuit.rs  lib.rs
src/circuits/: fibonacci.rs  mod.rs  multiplier.rs
wasm-example/: Cargo.toml  index.html  start.sh
wasm-example/src/: lib.rs
