[package]
name = "wasm-example"
version = "0.1.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde_support", "borsh_support"]
serde_support = ["fawkes-crypto/serde_support"]
borsh_support = ["fawkes-crypto/borsh_support"]

[dependencies]
wasm-bindgen = "0.2.63"
fawkes-crypto = { git = "https://github.com/zeropoolnetwork/fawkes-crypto.git", default-features = false, features = ["plonk", "wasm"] }

